--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px transparent #947676 !important; 
+  outline: 1px solid #947676 !important; 
   } 
   
    * { 
@@ -12,11 +12,11 @@
 
     .calculator {
       background-color: #3B3857;
-      height: 330px;
+      height: 320px;
       width: 250px;
       border-radius: 10px;
       position: relative;
-      top: 80px;
+      top: 60px;
       margin-left: auto;
       margin-right: auto
   }
@@ -108,4 +108,32 @@ background: #eb8090
 
 p {
   line-height: 10px;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 2%;
+  font-family: 'Mali', cursive;
+}
+
+.bg {
+  background-image: url("./background.jpg");
+  background-color: grey;
+  background-position: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  filter: blur(0.5px) brightness(80%);
+  min-height: 100vh;
+  height: 100%;
+  width: 100vw;
+  display:flex;
+  align-items: center;
 }
