--- a/server/public/main.css
+++ b/server/public/main.css
@@ -11,69 +11,66 @@
 
 
     .calculator {
-      background-color: #3B3857;
-      height: 350px;
-      width: 260px;
+      background-color: #E4EDF8;
+      height: 400px;
+      width: 300px;
       border-radius: 15px;
       position: relative;
       top: 60px;
       margin-left: auto;
-      margin-right: auto
+      margin-right: auto;
+      box-shadow: 8px 8px #009ACD;
+      border-left: 4px solid #009ACD;
+      border-top: 2px solid #009ACD;
   }
 
-input {
-  position: relative;
-  width:220px;
-  height: 45px;
-  left: 20px;
-  top: 30px;
-  font-size: 25px;
-  text-align: right;
-  margin-bottom: 8%;
-  border-radius: 5px;
+    input {
+      position: relative;
+      width:240px;
+      height: 50px;
+      left: 28px;
+      top: 50px;
+      font-size: 30px;
+      text-align: right;
+      margin-bottom: 8%;
+      border-radius: 5px;
+    }
+  
 
-}
-
-.keys {
-  position: relative;
-  top: 15px;
-}
+    .keys {
+      position: relative;
+      top: 35px;
+      left: 15px;
+      bottom: 10px
+    }
 
 .button {
-  width: 40px;
-  height: 30px;
+  width: 45px;
+  height: 35px;
   border: none;
   border-radius: 8px;
   margin-left: 17px;
   cursor: pointer;
   border-top: 2px solid transparent;
+  font-size: 25px
 }
 
-  .button.gray {
+  .button.blue {
       color: white;
-      background-color: #747BA9;
-      border-bottom: black 2px solid;
-      border-top: 2px #6f6f6f solid;
+      background-color: #00ACD2;
+      box-shadow: 3px 3px #004C76;
   }
 
-  .button.pink {
-      color: white;
-      background-color: #9A1B27;
-      border-bottom: black 2px solid;
-  }
-
-  .button.black {
-      color: white;
-      background-color: 303030;
-      border-bottom: black 2px solid;
-      border-top: 2px 303030 solid;
+  .button.white {
+      color: #048ED8;
+      background-color: white;
+      box-shadow: 3px 3px #908EAE;
   }
 
   .button.orange {
-      color: black;
-      background-color: #F2DD66;
-      border-bottom: black 2px solid;
-      border-top: 2px FF9933 solid;
+      background-color: #FFC200;
+      color: #89687F;
+      box-shadow: 3px 3px #FC9925;
   }
 
 .gray:active {
