changed the colour of the h1

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -100,7 +100,7 @@ h1 {
   text-align: center;
   margin-top: 2%;
   font-family: 'Mali', cursive;
-  color: #54524F;
+  color: #2E2E37;
   font-size: 45px
 }
 
